--- a/web/css/main.css
+++ b/web/css/main.css
@@ -80,3 +80,21 @@ header#primary h1
 .clickable {
     cursor: pointer;
 }
+
+.nodeSelected, .nodeSelected :hover {
+    font-weight: bold !important;
+    cursor: default !important;
+    text-decoration: none !important;
+    background: #aaaaaa -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.25)), to(rgba(0,0,0,0))) !important;
+    color: #ffffff !important;
+    text-shadow: 1px 1px 1px #333333 !important;
+    text-decoration: none !important;
+    padding: 2px 4px !important;
+    -webkit-border-radius: 3px !important;
+    border-radius: 3px !important;
+
+}
+
+.nodeSelected :hover {
+    pointer-events: none !important;
+}
